Fixed charts view on mobile mode

--- a/src/style/components/tabs.scss
+++ b/src/style/components/tabs.scss
@@ -46,7 +46,6 @@
   }
 
   .tab-content {
-    min-height: 690px;
     padding: 25px 0;
   }
 }
